2009-04-05  Philip Withnall  <philip@tecnocode.co.uk>

	* src/totem-video-list.c (query_tooltip_cb), (show_popup_menu),
	(add_to_playlist_action_callback), (copy_location_action_callback):
	Fixed TotemVideoList to change the sensitivity of its context menu
	entries according to the data available for the current row.

2009-04-04  Philip Withnall  <philip@tecnocode.co.uk>

	* configure.in:
	* src/backend/bacon-video-widget-gst-0.10.c:
	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_get_current_frame):
	* src/backend/bacon-video-widget.h:
	* src/plugins/youtube/totem-youtube.c (starting_video_cb):
	Changed from run-time to compile-time detection of GStreamer elements
	required by the YouTube plugin (i.e. souphttpsrc).

2009-04-03  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_get_tags_of_current_stream):
	Improve debug output a bit by outputting the GstTagList content
	instead of just the memory address.

2009-04-03  Philip Withnall  <philip@tecnocode.co.uk>

	* docs/reference/Makefile.am: Updated API documentation Makefile
	such that it isn't trying to document marshalling API or plugins.
	* docs/reference/totem-docs.xml: Updated API documentation's DocBook
	version to 4.5.

2009-04-03  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c (totem_playlist_init): Fix tooltip
	settings in the playlist, nobody could have tested that...

2009-04-03  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bvw_update_interface_implementations):
	Remove unused variable

2009-04-02  Philip Withnall  <philip@tecnocode.co.uk>

	* data/totem.1: Updated the man page to clarify command-line options.
	(Closes: #562651)

2009-04-02  Philip Withnall  <philip@tecnocode.co.uk>

	* configure.in:
	* src/totem-object.c (totem_callback_connect): Remove our last
	deprecated GTK+ function call, bumping our GTK+ requirement to
	2.16.0. (Closes: #572089)
